--- a/exercicio2m.css
+++ b/exercicio2m.css
@@ -4,8 +4,9 @@
     box-sizing: border-box;
 }
 
-Exemplo de Box Model, div{
+.Exemplo{
     width: 300px;
     height: 150px;
     background-color: #d3eaff;
+    padding: 20px;
 }
